# p2p-file-sharing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: client.c  communication.c  communication.h  file_scan.c  file_scan.h
server/: file_registry.c  file_registry.h  server.c  services.c  services.h
shared/: communication_protocol.txt  message_types.h  peer.h
